2000-08-03  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew-draft-translate):
	Execute mew-header-encode-region() safer.

	* emacs/mhc.el (mhc-edit): Ensure reedit when imported buffer is schedule.
	
2000-08-03  Yoshinari NOMURA  <nom@quickhack.net>

	* ruby-ext/lib/mhc-gtk.rb.in (toplevel):
	if Win32 plathome, override MhcKconv::todisp using Uconv::euctou8
        (Thanks to Mr. WATANABE Hirofumi)
	
	* ruby-ext/lib/mhc-palm.rb (toplevel): rescue LoadError of mhc_pilib.
        (Thanks to Mr. WATANABE Hirofumi)

2000-08-02  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-db.el (mhc-db/eval-for-duration):
	fix estimation of week-of-month.

2000-08-02  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-cmail.el (toplevel): Set draft related backends for SEMI.

2000-08-02  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* emacs/mhc-cmail.el (mhc-cmail-mime-get-raw-buffer): Implemented.
	(mhc-cmail-summary-display-article): Set page number.

2000-08-02  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew-eword-decode-string): Fix problem,
	handling method of whitespace between encoded words.

2000-08-02  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-cmail.el (toplevel): Require 'mime-edit and 'eword-decode.
	(mhc-cmail-eword-decode-string): Implemented.
	(mhc-cmail-draft-setup-new): Ditto.
	(mhc-cmail-draft-reedit-buffer): Ditto.
	(mhc-cmail-draft-reedit-file): Ditto.
	(mhc-cmail-draft-translate): Ditto.

2000-08-02  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-setup): Run hook with symbol name.
	(mhc-exit): Ditto.
	
	* emacs/mhc-calendar.el (mhc-calendar-insert-summary-contents):
	Bind mhc-mailer-package to 'calendar as decode-string.
	(mhc-calendar-eword-decode-string): New function, decode encoded word
	using Mew or SEMI.

	* emacs/mhc-mew.el (mhc-mew/date-to-buffer): Change format parameter.
	(mhc-mew-get-import-buffer): When call mew-summary-display-asis, add
	option (get full message).